ajustement img gallerie

--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
           </a>
         </div>
         <div class="col">
-          <a href="assets/image-6.jpg" data-lightbox="gallery" data-title="Champ de lavande">
+          <a href="assets/image-6.jpg" data-lightbox="gallery" data-title="Chat chanel">
             <img src="assets/image-6.jpg" class="img-fluid gallery-img" alt="Image 6">
           </a>
         </div>
         <div class="col">
-          <a href="assets/image-7.jpg" data-lightbox="gallery" data-title="Ecureuil">
-            <img src="assets/image-7.jpg" class="img-fluid gallery-img" alt="Image 7">
+          <a href="assets/image-7.png" data-lightbox="gallery" data-title="chien-lilas">
+            <img src="assets/image-7.png" class="img-fluid gallery-img" alt="Image 7">
           </a>
         </div>
         <div class="col">
@@ -253,7 +253,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="assets/image-11.jpg" data-lightbox="gallery" data-title="Mouton">
+          <a href="assets/image-11.jpg" data-lightbox="gallery" data-title="Yorkshare">
             <img src="assets/image-11.jpg" class="img-fluid gallery-img" alt="Image 11">
           </a>
         </div>
