--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +38,6 @@
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          </button>
           <div class="collapse navbar-collapse lato-thin-font fw-bold" id="navbarCollapse">
             <ul class="navbar-nav ms-auto fs-5" id="liens">
               <li class="nav-item">
@@ -61,16 +59,16 @@
           </div>
         </div>
       </nav>
-
-      <section class="intro text-center text-md-start">
-        <div class="container">
-          <h1 class="display-2 fw-normal fst-italic">Vos idées - Notre savoir
-            <h1 />
-            <div class="kaushan-font display-1 pb-5">Agence Lorem</div>
-            <a href="#" class="btn btn-dark">En savoir +</a>
-            <a href="#nosprojets" class="btn btn-outline-secondary">Nos projets</a>
-        </div>
-      </section>
+    </div>
+    <section class="intro text-center text-md-start">
+      <div class="container">
+        <h1 class="display-2 fw-normal fst-italic">Vos idées - Notre savoir
+        </h1>
+        <div class="kaushan-font display-1 pb-5">Agence Lorem</div>
+        <a href="#" class="btn btn-dark">En savoir +</a>
+        <a href="#nosprojets" class="btn btn-outline-secondary">Nos projets</a>
+      </div>
+    </section>
   </header>
 
   <section id="aPropos" class="border-top border-1 border-secondary py-5">
@@ -88,7 +86,7 @@
         <div class="col-md-6  ">
           <div class="accordion custom-accordion" id="accordionExample">
             <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingOne">
+              <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne">Les détails</button>
               </h2>
@@ -201,80 +199,185 @@
       <p>Nos réalisations</p>
     </div>
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 g-2">
+      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 g-3">
         <div class="col">
           <a href="assets/image-1.jpg" data-lightbox="gallery" data-title="Doberman">
-            <img src="assets/image-1.jpg" class="img-fluid gallery-img" alt="Image 1">
+            <img src="assets/image-1.jpg" class="img-fluid gallery-img rounded-1" alt="Image 1">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-2.jpg" data-lightbox="gallery" data-title="Berger blanc suisse">
-            <img src="assets/image-2.jpg" class="img-fluid gallery-img" alt="Image 2">
+            <img src="assets/image-2.jpg" class="img-fluid gallery-img rounded-1" alt="Image 2">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-3.jpg" data-lightbox="gallery" data-title="Berger allemand">
-            <img src="assets/image-3.jpg" class="img-fluid gallery-img" alt="Image 3">
+            <img src="assets/image-3.jpg" class="img-fluid gallery-img rounded-1" alt="Image 3">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-4.jpg" data-lightbox="gallery" data-title="Berger blanc suisse">
-            <img src="assets/image-4.jpg" class="img-fluid gallery-img" alt="Image 4">
+            <img src="assets/image-4.jpg" class="img-fluid gallery-img rounded-1" alt="Image 4">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-5.jpg" data-lightbox="gallery" data-title="Caniche">
-            <img src="assets/image-5.jpg" class="img-fluid gallery-img" alt="Image 5">
+            <img src="assets/image-5.jpg" class="img-fluid gallery-img rounded-1" alt="Image 5">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-6.jpg" data-lightbox="gallery" data-title="Chat chanel">
-            <img src="assets/image-6.jpg" class="img-fluid gallery-img" alt="Image 6">
+            <img src="assets/image-6.jpg" class="img-fluid gallery-img rounded-1 " alt="Image 6">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-7.png" data-lightbox="gallery" data-title="chien-lilas">
-            <img src="assets/image-7.png" class="img-fluid gallery-img" alt="Image 7">
+            <img src="assets/image-7.png" class="img-fluid gallery-img rounded-1 " alt="Image 7">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-8.jpg" data-lightbox="gallery" data-title="Biches">
-            <img src="assets/image-8.jpg" class="img-fluid gallery-img" alt="Image 8">
+            <img src="assets/image-8.jpg" class="img-fluid gallery-img rounded-1" alt="Image 8">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-9.jpg" data-lightbox="gallery" data-title="Biche">
-            <img src="assets/image-9.jpg" class="img-fluid gallery-img" alt="Image 9">
+            <img src="assets/image-9.jpg" class="img-fluid gallery-img rounded-1" alt="Image 9">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-10.jpg" data-lightbox="gallery" data-title="Ratier de Prague">
-            <img src="assets/image-10.jpg" class="img-fluid gallery-img" alt="Image 10">
+            <img src="assets/image-10.jpg" class="img-fluid gallery-img rounded-1" alt="Image 10">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-11.jpg" data-lightbox="gallery" data-title="Yorkshare">
-            <img src="assets/image-11.jpg" class="img-fluid gallery-img" alt="Image 11">
+            <img src="assets/image-11.jpg" class="img-fluid gallery-img rounded-1" alt="Image 11">
           </a>
         </div>
         <div class="col">
           <a href="assets/image-12.jpg" data-lightbox="gallery" data-title="Berger blanc suisse">
-            <img src="assets/image-12.jpg" class="img-fluid gallery-img" alt="Image 12">
+            <img src="assets/image-12.jpg" class="img-fluid gallery-img rounded-1" alt="Image 12">
           </a>
         </div>
-
-
+      </div>
+    </div>
+  </section>
+  <!-- Bannière 2 -->
+  <section id="ban2" class="py-2">
+    <div class="container">
+      <div id="carouselContent" class="carousel slide" data-bs-ride="carousel">
+        <!-- attribut qui indique demarrer automatiquement -->
+        <div class="carousel-inner">
+          <div class="carousel-item active text-center p-4">
+            <p class="kaushan-font">errare humanum est perseverare diabolicum</p>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <p class="kaushan-font">errare humanum est perseverare diabolicum</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
 
-  <!-- jQuery (nécessaire pour Ekko Lightbox) -->
+  <!-- Tarifs -->
+
+  <section class="text-center py-5" id="prix">
+    <h1 class="border-bottom text-center kaushan-font display-3 pb-5">
+      Nos offres
+    </h1>
+    <div class="container py-5">
+      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-4">
+
+        <!-- colonne 1 -->
+        <div class="col d-flex justify-content-center">
+          <div class="card shadow-lg text-center w-100">
+            <!--  w-100 pour occuper toute la largeur -->
+
+            <div class="header  p-0">
+              <h5 class="card-title fs-2 kaushan-font pt-4">Amateur</h5>
+              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">9.99 €</span><span class="small-text"> /
+                  mois</span></h2>
+            </div>
+            <!--  d-flex et flex-column pour organiser le contenu verticalement, justify-content-center pour centrer verticalement -->
+            <div class="card-body d-flex flex-column justify-content-center p-0  ">
+              <div class="text lato-thin-font pb-4 ">
+                <div class="mb-2">2G Bande Passante</div>
+                <div class="mb-2">150GB de stockage</div>
+                <div class="mb-2">5 Profils</div>
+                <div class="mb-2">3 Noms de Domaine</div>
+              </div>
+            </div>
+            <!-- d-flex justify-content-center pour centrer le bouton -->
+            <div class="pb-3 d-flex justify-content-center">
+              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- colonne 2 -->
+
+        <div class="col d-flex justify-content-center">
+          <div class="card shadow-lg  text-center">
+            <div class="header p-0">
+              <h5 class="card-title fs-2 kaushan-font pt-4">Professionnel</h5>
+              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">79 €</span><span class="small-text"> /
+                  mois</span></h2>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-center p-0">
+              <div class="text pb-4 lato-thin-font">
+                <div class="mb-2">4G Bande Passante</div>
+                <div class="mb-2">850GB de stockage</div>
+                <div class="mb-2">15 Profils</div>
+                <div class="mb-2">10 Noms de Domaine</div>
+              </div>
+            </div>
+
+            <div class="pb-3 d-flex justify-content-center">
+              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- col 3 -->
+        <div class="col d-flex justify-content-center">
+          <div class="card shadow text-center">
+            <div class="header p-0">
+              <h5 class="card-title fs-2 kaushan-font pt-4">Expert</h5>
+              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">399 €</span><span class="small-text"> /
+                  mois</span></h2>
+            </div>
+
+            <div class="card-body d-flex flex-column justify-content-center p-0">
+              <div class="text lato-thin-font pb-4">
+                <div class="mb-2">10G Bande Passante</div>
+                <div class="mb-2">2050GB de stockage</div>
+                <div class="mb-2">8 Profils</div>
+                <div class="mb-2">100 Noms de Domaine</div>
+              </div>
+            </div>
+
+            <div class="pt-4 d-flex justify-content-center">
+              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- jQuery (Lightbox) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- Bootstrap 5 JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Lightbox2 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+
+
 
 </body>
 
