--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -22,69 +22,72 @@
 
 <body>
   <!-- header -->
-  <header id="top">
 
+  <header id="top">
     <!-- navbar -->
 
-    <div class="container">
-
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top" id="main-nav">
-        <div class="container">
-          <a href="index.html" class="navbar-brand kaushan-font fs-2">
-            <span class="kaushan-font fs-2">Lorem</span>
-            <img class="width d-none d-md-inline-block" src="assets/lorem.png" alt="Logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse lato-thin-font fw-bold" id="navbarCollapse">
-            <ul class="navbar-nav ms-auto fs-5" id="liens">
-              <li class="nav-item">
-                <a href="#top" class="nav-link">Accueil</a>
-              </li>
-              <li class="nav-item">
-                <a href="#aPropos" class="nav-link">Concept</a>
-              </li>
-              <li class="nav-item">
-                <a href="#galerie" class="nav-link">Nos Projets</a>
-              </li>
-              <li class="nav-item">
-                <a href="#prix" class="nav-link">Tarifs</a>
-              </li>
-              <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <section class="intro text-center text-md-start">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top" id="main-nav">
       <div class="container">
-        <h1 class="display-2 fw-normal fst-italic">Vos idées - Notre savoir
-        </h1>
-        <div class="kaushan-font display-1 pb-5">Agence Lorem</div>
-        <a href="#" class="btn btn-dark">En savoir +</a>
-        <a href="#nosprojets" class="btn btn-outline-secondary">Nos projets</a>
+        <a href="index.html" class="navbar-brand nabvar opaque kaushan-font">
+          <span class="kaushan-font fs-2">Lorem</span>
+          <img class="width d-none d-md-inline-block" src="assets/lorem.png" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse fw-bold" id="navbarCollapse">
+          <ul class="navbar-nav ms-auto" id="liens">
+            <li class="nav-item">
+              <a href="#top" class="nav-link">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a href="#aPropos" class="nav-link">Concept</a>
+            </li>
+            <li class="nav-item">
+              <a href="#galerie" class="nav-link">Nos Projets</a>
+            </li>
+            <li class="nav-item">
+              <a href="#price" class="nav-link">Tarifs</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <section class="intro text-center text-sm-start">
+      <div class="container">
+
+        <div class="fs-md-1">Vos idées - Notre savoir
+          <h1 class="kaushan-font display-1 text-dark">Agence Lorem</h1>
+          <a href="#" class="btn btn-dark mt-3 me-2">En Savoir Plus</a>
+          <a href="#" class="btn btn-outline-dark mt-3">Nos Projets</a>
+        </div>
+
       </div>
     </section>
   </header>
 
-  <section id="aPropos" class="border-top border-1 border-secondary py-5">
+  
+  <section id="aPropos" class="py-5">
+
     <div class="container justify ">
       <div class="row">
         <div class="col-md-6">
           <h2 class="border-bottom pb-3">A propos</h2>
-          <p class=" fw-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem accusantium explicabo
+          <p class=" fw-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem accusantium explicabo
             aperiam distinctio et illo odit nulla obcaecati. Ducimus repellat rerum porro nostrum similique enim et,
             esse maxime? Officiis, necessitatibus. ipsum dolor, sit amet consectetur adipisicing elit. Fugiat beatae
             quasi repudiandae fuga minima blanditiis dolorem ea natus, esse incidunt.</p>
         </div>
 
         <!-- accordion -->
-        <div class="col-md-6  ">
-          <div class="accordion custom-accordion" id="accordionExample">
+        <div class="col-md-6">
+          <div class="accordion custom-accordion mt-md-5 my-sm-0" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -124,10 +127,13 @@
         </div>
       </div>
     </div>
+
   </section>
 
   <!-- section 3 icones -->
+  <hr class="custom-separator">
   <section class="py-5">
+
     <div class="container">
       <div class="row">
 
@@ -185,7 +191,7 @@
     d-md-block : Affiche le paragraphe comme un bloc à partir du breakpoint md (≥768px)
     Résultat : Le paragraphe est visible uniquement sur les écrans md et plus grands
   -->
-    <a href="#" class="btn btn-primary">Démarrez maintenant</a>
+    <a href="#" class="btn btn-outline-info text-primary">Démarrez maintenant</a>
 
   </section>
 
@@ -194,9 +200,9 @@
 
   <section class="galery py-5" id="galerie">
     <div class="text-center">
-      <h1 class="kaushan-font py-5">Nos projets
+      <h1 class="kaushan-font pb-2">Nos projets
       </h1>
-      <p>Nos réalisations</p>
+      <p class="pb-3">Nos réalisations</p>
     </div>
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 g-3">
@@ -283,11 +289,11 @@
 
   <!-- Tarifs -->
 
-  <section class="text-center py-5" id="prix">
-    <h1 class="border-bottom text-center kaushan-font display-3 pb-5">
-      Nos offres
-    </h1>
-    <div class="container py-5">
+  <section class="text-center " id="price">
+    <h2 class="text-center kaushan-font display-3 py-5">
+      Nos offres</h2>
+    <hr class="custom-separator">
+    <div class="container pt-5">
       <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-4">
 
         <!-- colonne 1 -->
@@ -297,21 +303,21 @@
 
             <div class="header  p-0">
               <h5 class="card-title fs-2 kaushan-font pt-4">Amateur</h5>
-              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">9.99 €</span><span class="small-text"> /
+              <h2 class="mb-0 pb-3"><span>9.99 €</span><span class="small-text"> /
                   mois</span></h2>
             </div>
             <!--  d-flex et flex-column pour organiser le contenu verticalement, justify-content-center pour centrer verticalement -->
             <div class="card-body d-flex flex-column justify-content-center p-0  ">
-              <div class="text lato-thin-font pb-4 ">
-                <div class="mb-2">2G Bande Passante</div>
-                <div class="mb-2">150GB de stockage</div>
-                <div class="mb-2">5 Profils</div>
-                <div class="mb-2">3 Noms de Domaine</div>
+              <div class="text pb-1 ">
+                <div class="mb-2 text-responsive">2G Bande Passante</div>
+                <div class="mb-2 text-responsive">150GB de stockage</div>
+                <div class="mb-2 text-responsive">5 Profils</div>
+                <div class="mb-2 text-responsive">3 Noms de Domaine</div>
               </div>
             </div>
             <!-- d-flex justify-content-center pour centrer le bouton -->
             <div class="pb-3 d-flex justify-content-center">
-              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+              <a href="#" class="btn btn-outline-info rounded-pill text-primary">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -322,20 +328,20 @@
           <div class="card shadow-lg  text-center">
             <div class="header p-0">
               <h5 class="card-title fs-2 kaushan-font pt-4">Professionnel</h5>
-              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">79 €</span><span class="small-text"> /
+              <h2 class="mb-0 pb-3"><span>79 €</span><span class="small-text"> /
                   mois</span></h2>
             </div>
             <div class="card-body d-flex flex-column justify-content-center p-0">
-              <div class="text pb-4 lato-thin-font">
-                <div class="mb-2">4G Bande Passante</div>
-                <div class="mb-2">850GB de stockage</div>
-                <div class="mb-2">15 Profils</div>
-                <div class="mb-2">10 Noms de Domaine</div>
+              <div class="text pb-1 ">
+                <div class="mb-2 text-responsive">4G Bande Passante</div>
+                <div class="mb-2 text-responsive">850GB de stockage</div>
+                <div class="mb-2 text-responsive">15 Profils</div>
+                <div class="mb-2 text-responsive">10 Noms de Domaine</div>
               </div>
             </div>
 
             <div class="pb-3 d-flex justify-content-center">
-              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+              <a href="#" class="btn btn-outline-info rounded-pill text-primary">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -345,21 +351,21 @@
           <div class="card shadow text-center">
             <div class="header p-0">
               <h5 class="card-title fs-2 kaushan-font pt-4">Expert</h5>
-              <h2 class="mb-0 pb-3 lato-thin-font"><span id="spanPrix">399 €</span><span class="small-text"> /
+              <h2 class="mb-0 pb-3"><span>399 €</span><span class="small-text"> /
                   mois</span></h2>
             </div>
 
             <div class="card-body d-flex flex-column justify-content-center p-0">
-              <div class="text lato-thin-font pb-4">
-                <div class="mb-2">10G Bande Passante</div>
-                <div class="mb-2">2050GB de stockage</div>
-                <div class="mb-2">8 Profils</div>
-                <div class="mb-2">100 Noms de Domaine</div>
+              <div class="text pb-1">
+                <div class="mb-2 text-responsive">10G Bande Passante</div>
+                <div class="mb-2 text-responsive">2050GB de stockage</div>
+                <div class="mb-2 text-responsive">8 Profils</div>
+                <div class="mb-2 text-responsive">100 Noms de Domaine</div>
               </div>
             </div>
 
-            <div class="pt-4 d-flex justify-content-center">
-              <a href="#" class="btn btn-outline-info rounded-pill">S'inscrire</a>
+            <div class="pb-3 d-flex justify-content-center">
+              <a href="#" class="btn btn-outline-info rounded-pill text-primary">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -368,6 +374,107 @@
   </section>
 
 
+  <!-- Section Progress -->
+  <section id="progress">
+    <hr class="custom-separator">
+    <div class="container py-5 px-md-3 px-lg-5">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class=" border-bottom pb-3 text-center text-md-start">Nos compétences</h2>
+          <p class="bar pb-sm-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias iste incidunt
+            consectetur ullam aut quos aperiam, ipsam pariatur adipisci distinctio, enim dolor? Nisi excepturi modi
+            aliquid adipisci fuga porro officia?</p>
+        </div>
+        <div class="col-md-6">
+          <div class="title">Marketing Digital</div>
+          <div class="progress mt-1">
+            <div class="progress-bar w-25" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+          <div class="title">Growth Hacking</div>
+          <div class="progress mt-1">
+            <div class="progress-bar progress-bar-striped progress-bar-animated w-50" role="progressbar"
+              aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <div class="title">Communication</div>
+          <div class="progress mt-1">
+            <div class="progress-bar  w-75" role="progressbar" aria-valuenow="75" aria-valuemin="75"
+              aria-valuemax="100"></div>
+          </div>
+          <div class="title">Réseaux</div>
+          <div class="progress mt-1">
+            <div class="progress-bar progress-bar-striped bg-info w-100" role="progressbar" aria-valuenow="25"
+              aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Customers -->
+  <hr class="custom-separator">
+  <section id="customers" class="d-flex justify-content-around align-item-center p-5">
+    <div class="container px-5">
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <a href="#"><img src="assets/spotify.jpg" class="img-fluid" alt="spotify"></a>
+        </div>
+        <div class="col-12 col-md-3">
+          <a href="#"><img src="assets/microsoft.jpg" class="img-fluid" alt="microsoft"></a>
+        </div>
+        <div class="col-12 col-md-3">
+          <a href="#"><img src="assets/apple.jpg" class="img-fluid" alt="apple"></a>
+        </div>
+        <div class="col-12 col-md-3">
+          <a href="#"><img src="assets/google.jpg" class="img-fluid" alt="google"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr class="custom-separator">
+  <!-- Contact -->
+  <section class="send bg-light py-5" id="contact">
+    <div class="container px-lg-5">
+      <div class="row">
+        <h2 class="pt-3 text-center text-md-start">Contactez-nous</h2>
+        <p class="fst-italic pb-2 text-center text-md-start">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Soluta.</p>
+
+        <form>
+          <div class="input-group w-100 mb-3">
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="fa-regular fa-user"></i></span>
+              <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                >
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="fa-regular fa-envelope"></i></span>
+              <input type="text" class="form-control" placeholder="Email" aria-label="email"
+               >
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="fa-regular fa-pen-to-square"></i></span>
+              <input type="text" class="form-control" placeholder="Message" aria-label="message"
+               >
+            </div>
+          </div>
+          <div class="d-grid">
+            <input type="submit" class="btn btn-dark text-white  btn-lg mt-3">
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="py-3 d-flex justify-content-center align-items-center">
+      <p class="text-center">&copy; <span id="currentYear"></span> Banby. Tous droits réservés.</p>
+    </div>
+  </footer>
+
+                                  <!-- Scripts -->
 
   <!-- jQuery (Lightbox) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -375,10 +482,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Lightbox2 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-
-
-
-
+  <script src="./app.js"></script>
 </body>
 
 </html>
